# llm-chat-template-renderer

./: README.md  app.py  main.py  pyproject.toml
chat_templates/: deepseek-v3.1.jinja  minimax-m2.jinja
components/: __init__.py  config.py  highlighter.py  image_renderer.py  main_area.py  prompt.py  sidebar.py  state.py  template_renderer.py
