[project]
name = "llm-chat-template-builder"
version = "0.1.0"
description = "Interactive tool for building and visualizing chat prompts for various LLMs"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "transformers>=4.35.0",
    "pillow>=10.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
llm-chat-template-builder = "app:main"
